--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 <style type="text/css">
 
 	body {
-
 		background-color: #3CA2E0;     
 	}
-
 	.box {
-
-		width: 40%;
+ 		width: 40%;
         	height: 70%;
         	margin: 100px auto;
 		padding-left: : 50px;
@@ -22,7 +18,6 @@
 	}
 	
 	input {
-
 		display: block;
 		border-top: none;
 		border-left: none;
@@ -33,8 +28,7 @@
 		padding:5px;
 	}
 	
-	.buttonA {
-
+	.buttonSubmit {
 		padding: 10px;
 		text-transform: capitalize;
 		background-color: #FF3264;
@@ -46,14 +40,11 @@
 		font-weight: bold;
 		font-size: 15px;		
 	}
-
 	.brandlogo {
-
 		margin-left: 40%;
 	}
-	.tinput {
-
-        	display: flex;
+	.t_input {
+		display: flex;
         	margin-left: 30%;
         	margin-top: 20px;
         	margin-bottom: 25px; 
@@ -66,15 +57,15 @@
 <div class="box">
 	<form class="form">
 		<img class="brandlogo" src="brand.png">
-		<div class="tinput">
+		<div class="t_input">
 			<label><img src="username.png"></label>
-	        <input type="text" placeholder="Name">
+	        	<input type="text" placeholder="Name">
 		</div>
 		<div class="tinput">
 			<label><img src="password.png"></label>
-		    <input type="password" placeholder="password" >
+		    	<input type="password" placeholder="password" >
 		</div>
-		<button type="submit" class="buttonA">Log in</button>
+		<button type="submit" class="buttonSubmit">Log in</button>
 	</form>
 </div>
 </body>
