--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -90,30 +90,13 @@
     font-size: 14px;
   }
   .gradientBorder {
-    top: 30px;
-    position: relative;
     width: 30%;
-    height: 420px;
-    margin-left: 80px;]
-    color: #fff;
-    background: #fff;
-    justify-content: center;
-  }
-  .gradientBorder::after {
-    content: '';
-    background: linear-gradient( white,grey);
-    z-index: -1;
-  }
-  .gradientBorder::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient( white,grey,grey);
-    z-index: -2;
-    filter: blur(20px);
+    height:420px;
+    background-color: #FFF;
+    margin-top: 30px;
+	   margin-left: 80px;
+    box-shadow:
+      5px 5px 20px 5px #888888;
   }
   label{
     color: black;
