--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     border:none;
     border-radius: 20px;
     width: 40%;
-    color: #ED90B2;
-    margin-left: 32%;	
+    color: #FFF;
+    margin-left: 30%;	
   }
   .brandlogo {
     margin-left: 40%;
@@ -48,18 +48,18 @@
 </head>
 <body>
 <div class="box">
-	<form class="form">
-		<img class="brandlogo" src="brand.png">
-		<div class="t_input">
-			<label style="margin-right: 8px"><img src="username.png"></label>
-	        <input type="text" placeholder="Name">
-		</div>
-		<div class="t_input">
-			<label style="margin-right: 8px"><img src="password.png"></label>
-		    <input type="password" placeholder="password" >
-		</div>
-		<button type="submit" class="buttonSubmit">Log in</button>
-	</form>
+  <form class="form">
+    <img class="brandlogo" src="brand.png">
+    <div class="t_input">
+      <label style="margin-right: 8px"><img src="username.png"></label>
+      <input type="text" placeholder="Name">
+    </div>
+    <div class="t_input">
+      <label style="margin-right: 8px"><img src="password.png"></label>
+      <input type="password" placeholder="password" >
+    </div>
+    <button type="submit" class="buttonSubmit">Log in</button>
+  </form>
 </div>
 </body>
 </html>
