--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     width: 40%;
     height: 100%;
     margin: 79px auto;
-    padding-left: : 50px;
+    padding-left:50px;
     padding-top: 100px;
     padding-bottom: 100px;
     justify-content: center;
